# MyCrop

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/whxcs/mycrop/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  uCrop.cpp
app/src/main/java/com/whxcs/mycrop/: MainActivity.java  MyCropFrame.java  ZoomableDraweeView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/whxcs/mycrop/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
